--- a/time-app/package.json
+++ b/time-app/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "ofetch": "^1.3.3"
+    "ofetch": "^1.3.3",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
