--- a/time-app/package.json
+++ b/time-app/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "test": "vitest",
+    "test": "vitest --dom",
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
@@ -16,13 +16,16 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vitest/coverage-v8": "^0.34.6",
+    "@vue/test-utils": "^2.4.1",
+    "happy-dom": "^12.9.1",
+    "jsdom": "^22.1.0",
     "nuxt": "^3.7.4",
     "vitest": "^0.34.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "ofetch": "^1.3.3",
+    "@testing-library/vue": "^7.0.0",
     "vue-toastification": "^2.0.0-rc.5"
   }
 }
