Added layout and made UI changes - Added header to the page. - refactored the code with proper comments. - Made minor UI changes.

--- a/time-app/package.json
+++ b/time-app/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@testing-library/vue": "^7.0.0",
+    "vue-spinner": "^1.0.4",
     "vue-toastification": "^2.0.0-rc.5"
   }
 }
